<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:padding="16dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/etHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/open_sans_light"
        android:padding="12dp"
        android:text="@string/verify"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/etSubHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans_light"
        android:padding="8dp"
        android:text="@string/code"
        android:textAlignment="center"
        android:textColor="@color/eye"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etHead" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_light"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/eye"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSubHead" />

    <!--    <com.chaos.view.PinView-->
    <!--        android:id="@+id/pinview"-->
    <!--        app:itemCount="6"-->
    <!--        app:itemWidth="50dp"-->
    <!--        app:itemHeight="50dp"-->
    <!--        android:layout_marginTop="80dp"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:itemBackground="@color/blue"-->
    <!--        android:layout_gravity="center"-->
    <!--        android:inputType="phone"-->
    <!--        style="@style/PinWidget.PinView"-->
    <!--        android:digits="0123456789"-->
    <!--        android:maxLength="6"-->
    <!--        android:hint="@string/otp"-->
    <!--        android:singleLine="true"-->
    <!--        android:cursorVisible="true"-->
    <!--        app:hideLineWhenFilled="true"-->
    <!--        app:itemRadius="10dp"-->
    <!--        android:imeOptions="actionDone"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/edtext" />-->

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/otp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/rounded"
        android:cursorVisible="true"
        android:digits="0123456789"
        android:hint="@string/o"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:maxLength="1"
        android:padding="20dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/etResend"
        app:layout_constraintEnd_toStartOf="@id/otp2"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtext" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/otp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:background="@drawable/rounded"
        android:cursorVisible="true"
        android:digits="0123456789"
        android:hint="@string/o"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:maxLength="1"
        android:padding="20dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/etResend"
        app:layout_constraintStart_toEndOf="@id/otp1"
        app:layout_constraintTop_toBottomOf="@id/edtext" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/otp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:background="@drawable/rounded"
        android:cursorVisible="true"
        android:digits="0123456789"
        android:hint="@string/o"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:maxLength="1"
        android:padding="20dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/etResend"
        app:layout_constraintStart_toEndOf="@id/otp2"
        app:layout_constraintTop_toBottomOf="@id/edtext" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/otp4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:background="@drawable/rounded"
        android:cursorVisible="true"
        android:digits="0123456789"
        android:hint="@string/o"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:maxLength="1"
        android:padding="20dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/etResend"
        app:layout_constraintStart_toEndOf="@id/otp3"
        app:layout_constraintTop_toBottomOf="@id/edtext" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/otp5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:background="@drawable/rounded"
        android:cursorVisible="true"
        android:digits="0123456789"
        android:hint="@string/o"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:maxLength="1"
        android:padding="20dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/etResend"
        app:layout_constraintStart_toEndOf="@id/otp4"
        app:layout_constraintTop_toBottomOf="@id/edtext" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/otp6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded"
        android:cursorVisible="true"
        android:digits="0123456789"
        android:hint="@string/o"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:maxLength="1"
        android:padding="21dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/etResend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/otp5"
        app:layout_constraintTop_toBottomOf="@id/edtext" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/etResend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_light"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/resend"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/otp1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button"
        android:fontFamily="@font/open_sans_light"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etResend" />

</androidx.constraintlayout.widget.ConstraintLayout>