<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity2">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:padding="16dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />


        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="50dp"
            app:cardUseCompatPadding="true"
            app:cardElevation="19dp"
            app:cardBackgroundColor="@color/grey"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etName2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    app:startIconDrawable="@drawable/ic_baseline_person_24"
                    android:background= "@drawable/rounded"
                    android:layout_marginHorizontal="22dp"
                    android:layout_marginTop="32dp"
                    app:boxBackgroundMode="outline"
                    android:paddingBottom="4dp"
                    app:layout_constraintVertical_chainStyle="spread"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/etEmail2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded"
                        android:ems="15"
                        android:fontFamily="@font/open_sans_light"
                        android:inputType="textPersonName"
                        android:padding="12dp"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etEmail2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:startIconDrawable="@drawable/ic_baseline_email_24"
                    android:background= "@drawable/rounded"
                    android:layout_marginHorizontal="22dp"
                    android:layout_marginTop="32dp"
                    app:boxBackgroundMode="outline"
                    android:paddingBottom="4dp"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etName2"
                    app:layout_constraintBottom_toTopOf="@id/etPhone2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edEmail2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:fontFamily="@font/open_sans_light"
                        android:padding="12dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:background="@drawable/rounded"
                        android:ems="15"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etPhone2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/no"
                    app:startIconDrawable="@drawable/ic_baseline_phone_24"
                    android:background= "@drawable/rounded"
                    android:layout_marginHorizontal="22dp"
                    android:layout_marginTop="32dp"
                    app:boxBackgroundMode="outline"
                    android:paddingBottom="4dp"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etEmail2"
                    app:layout_constraintBottom_toTopOf="@id/etPass2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edPhone2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:digits="0123456789"
                        android:fontFamily="@font/open_sans_light"
                        android:padding="12dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:background="@drawable/rounded"
                        android:maxLength="10" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etPass2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass"
                    app:startIconDrawable="@drawable/baseline_lock_24"
                    android:background="@drawable/rounded"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/eye"
                    android:layout_marginTop="32dp"
                    android:layout_marginHorizontal="22dp"
                    app:boxBackgroundMode="outline"
                    android:paddingBottom="4dp"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etPhone2"
                    app:layout_constraintBottom_toTopOf="@id/btn2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edPass2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:fontFamily="@font/open_sans_light"
                        android:padding="12dp"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:background="@drawable/rounded"
                        android:ems="15" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="32dp"
                    android:layout_marginHorizontal="80dp"
                    android:textSize="16sp"
                    android:padding="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:hint="@string/sign"
                    android:gravity="center"
                    android:background="@drawable/button"
                    android:fontFamily="@font/open_sans_light"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etPass2"
                    />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>